# track_model_curve

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yaml
apps/draw_arc/: CMakeLists.txt  main.cc
apps/draw_curve/: CMakeLists.txt  main.cc
apps/track_model_curve/: CMakeLists.txt  main.cc
libs/draw_arc/core/: CMakeLists.txt  arc_algorithm.cc  arc_algorithm.h
libs/draw_curve/core/: CMakeLists.txt  arc_algorithm.cc  arc_algorithm.h  window.cc  window.h
libs/track_model_curve/core/: CMakeLists.txt  image_processing.cc  image_processing.h
libs/track_model_curve/curve_calculator/: CMakeLists.txt  arc_algorithm.cc  arc_algorithm.h
libs/track_model_curve/ui/: CMakeLists.txt  model.h  ui.cc  ui.h
libs/track_model_curve/ui/qml/: MainWindow.qml
scripts/: install_dependencies_arch.sh  install_dependencies_debian_ubuntu.sh  install_dependencies_macos.sh
unit_tests/: CMakeLists.txt
